navbar fixing and background color change

--- a/scss/_colors.scss
+++ b/scss/_colors.scss
@@ -6,7 +6,7 @@ $blue-color-font: #1e90ff;
 $blue-color-bg: #1e90ff;
 $bluish-green-font: #33ffe3;
 $bluish-green-bg: #33ffe3;
-$background-gradient-top: #000000;
-$background-gradient-middle: #000000;
-$background-gradient-bottom: #000000;
+$background-gradient-top: #3AAFA9;
+$background-gradient-middle: #2b7a78;
+$background-gradient-bottom: #def2f1;
 
