--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -1,15 +1,119 @@
 /* // Google Fonts */
-@import url(https://fonts.googleapis.com/css?family=Comfortaa|Fredericka+the+Great|Arizonia);
+@import url(https://fonts.googleapis.com/css?family=Comfortaa|Fredericka+the+Great|Arizonia|Cinzel+Decorative|Meie+Script);
 /* Font-Variables */
 /* Styles */
-/* NAVBAR SECTION*/
-.bg-red {
-  background-color: #1e90ff; }
+.hamburger-menu-button {
+  font-family: "Fredericka the Great";
+  width: 40px;
+  height: 40px;
+  padding: 6px;
+  display: block;
+  position: relative;
+  margin-top: 15px;
+  z-index: 100;
+  background: #3AAFA9;
+  border: 5px solid white;
+  box-sizing: content-box;
+  border-radius: 50%;
+  text-indent: 100%;
+  color: transparent;
+  white-space: nowrap;
+  cursor: pointer;
+  overflow: hidden; }
 
+.hamburger-menu-button-open {
+  top: 50%;
+  margin-top: -1px;
+  left: 50%;
+  margin-left: -12px; }
+
+.hamburger-menu-button-open,
+.hamburger-menu-button-open::before,
+.hamburger-menu-button-open::after {
+  position: absolute;
+  width: 24px;
+  height: 2px;
+  background: #fff;
+  border-radius: 4px;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s; }
+
+.hamburger-menu-button-open::before,
+.hamburger-menu-button-open::after {
+  left: 0;
+  content: ""; }
+
+.hamburger-menu-button-open::before {
+  top: 6px; }
+
+.hamburger-menu-button-open::after {
+  bottom: 6px; }
+
+.hamburger-menu-button-close {
+  background: transparent;
+  -webkit-transform: rotate(180deg);
+  transform: rotate(180deg); }
+
+.hamburger-menu-button-close::before {
+  -webkit-transform: translateY(-6px) rotate(45deg);
+  transform: translateY(-6px) rotate(45deg); }
+
+.hamburger-menu-button-close::after {
+  -webkit-transform: translateY(6px) rotate(-45deg);
+  transform: translateY(6px) rotate(-45deg); }
+
+.ham-menu {
+  position: absolute;
+  top: 42px;
+  left: 48px;
+  margin: auto;
+  max-width: 570px;
+  overflow: hidden;
+  font-family: "Fredericka the Great";
+  font-size: 1rem; }
+
+.menu li .nav-link {
+  color: #fff; }
+
+.ham-menu ul {
+  -webkit-transform: translateX(-110%);
+  transform: translateX(-110%);
+  background-color: #2b7a78;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out; }
+
+.ham-menu.on ul {
+  -webkit-transform: translateX(0px);
+  transform: translateX(0px); }
+
+.ham-menu ul {
+  font-size: 0; }
+
+.ham-menu ul li {
+  display: inline-block; }
+
+.ham-menu ul li:first-child .ham-menu ul li a {
+  padding-left: 30px; }
+
+.ham-menu ul li a {
+  padding: 5px;
+  display: block;
+  background-color: transparent;
+  color: #fff;
+  text-transform: uppercase;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  font-size: 11px; }
+
+.ham-menu ul li.active a, .ham-menu ul li a:hover {
+  background-color: #3AAFA9;
+  color: #fff !important; }
+
+/* NAVBAR SECTION */
 .navbar-brand {
-  color: #000000;
+  color: #3AAFA9;
   font-weight: normal;
-  font-size: 1.9rem;
+  font-size: 1.2rem;
   letter-spacing: 0.0625rem;
   font-family: "Fredericka the Great"; }
 
@@ -18,62 +122,63 @@ a {
   font-family: "Fredericka the Great"; }
 
 .nav-link {
-  color: #000000;
+  color: #3AAFA9;
   font-weight: 400;
-  font-size: 1.9rem;
+  font-size: 1.2rem;
   letter-spacing: 0.0625rem; }
 
-.navbar-toggler:focus,
-.navbar-toggler:active {
-  outline: 0; }
-
-.navbar-toggler span {
-  display: block;
-  background-color: #000000;
-  height: 4px;
-  width: 30px;
-  margin-top: 4px;
-  margin-bottom: 4px;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  position: relative;
-  left: 0;
-  opacity: 1; }
-
-.navbar-toggler span:nth-child(1),
-.navbar-toggler span:nth-child(3) {
-  -webkit-transition: transform .40s ease-in-out;
-  -moz-transition: transform .40s ease-in-out;
-  -o-transition: transform .40s ease-in-out;
-  transition: transform .40s ease-in-out; }
-
-.navbar-toggler:not(.collapsed) span:nth-child(1) {
-  position: absolute;
-  left: 12px;
-  top: 10px;
-  -webkit-transform: rotate(135deg);
-  -moz-transform: rotate(135deg);
-  -o-transform: rotate(135deg);
-  transform: rotate(135deg);
-  opacity: 0.9; }
-
-.navbar-toggler:not(.collapsed) span:nth-child(2) {
-  height: 12px;
-  visibility: hidden;
-  background-color: transparent; }
-
-.navbar-toggler:not(.collapsed) span:nth-child(3) {
-  position: absolute;
-  left: 12px;
-  top: 10px;
-  -webkit-transform: rotate(-135deg);
-  -moz-transform: rotate(-135deg);
-  -o-transform: rotate(-135deg);
-  transform: rotate(-135deg);
-  opacity: 0.9; }
-
+/* .navbar-toggler:focus, */
+/* .navbar-toggler:active { */
+/* outline: 0; */
+/* } */
+/**
+/* .navbar-toggler span { */
+/* display: block; */
+/* background-color: $black-color-bg; */
+/* height: 4px; */
+/* width: 30px; */
+/* margin-top: 4px; */
+/* margin-bottom: 4px; */
+/* -webkit-transform: rotate(0deg); */
+/* -moz-transform: rotate(0deg); */
+/* -o-transform: rotate(0deg); */
+/* transform: rotate(0deg); */
+/* position: relative; */
+/* left: 0; */
+/* opacity: 1; */
+/* } */
+/* .navbar-toggler span:nth-child(1), */
+/* .navbar-toggler span:nth-child(3) { */
+/* -webkit-transition: transform .40s ease-in-out; */
+/* -moz-transition: transform .40s ease-in-out; */
+/* -o-transition: transform .40s ease-in-out; */
+/* transition: transform .40s ease-in-out; */
+/* } */
+/* .navbar-toggler:not(.collapsed) span:nth-child(1) { */
+/* position: absolute; */
+/* left: 12px; */
+/* top: 10px; */
+/* -webkit-transform: rotate(135deg); */
+/* -moz-transform: rotate(135deg); */
+/* -o-transform: rotate(135deg); */
+/* transform: rotate(135deg); */
+/* opacity: 0.9; */
+/* } */
+/* .navbar-toggler:not(.collapsed) span:nth-child(2) { */
+/* height: 12px; */
+/* visibility: hidden; */
+/* background-color: transparent; */
+/* } */
+/* .navbar-toggler:not(.collapsed) span:nth-child(3) { */
+/* position: absolute; */
+/* left: 12px; */
+/* top: 10px; */
+/* -webkit-transform: rotate(-135deg); */
+/* -moz-transform: rotate(-135deg); */
+/* -o-transform: rotate(-135deg); */
+/* transform: rotate(-135deg); */
+/* opacity: 0.9; */
+/* } */
 /* MASTERHEAD SECTION */
 header
 h2 {
@@ -92,7 +197,7 @@ header {
   height: 100vh;
   padding: 0;
   width: 100%;
-  background: linear-gradient(#000000, #000000);
+  background: linear-gradient(#3AAFA9, #2b7a78);
   color: #fff; }
 
 .effect h1 {
@@ -116,7 +221,7 @@ header {
   -ms-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #7794ff, #44107A, #FF1361, #FFF800);
+  background-image: linear-gradient(45deg, #A1C3D1, #B39BC8, #E64398, #F172A1);
   animation: .5s shake infinite alternate; }
 
 @keyframes shake {
@@ -133,9 +238,9 @@ header {
   100% {
     transform: skewX(0deg); } }
 .txt-rotate {
-  font-family: "Arizonia";
+  font-family: "Meie Script";
   font-size: 30px;
-  color: #33ffe3; }
+  color: black; }
 
 .arrow
 a {
@@ -157,7 +262,7 @@ a {
     transform: translateY(-15px); } }
 /* HELLO SECTION */
 .Hello-section {
-  background: linear-gradient(#000000, #000000);
+  background: linear-gradient(#2b7a78, #def2f1);
   padding-top: 8rem; }
 
 #hello article {
@@ -171,6 +276,9 @@ a {
   margin: 0 0 10px;
   color: #fff;
   font-size: 2rem; }
+
+.touch {
+  background: linear-gradient(#def2f1, #def2f1); }
 
 /* WHAT I DO SECTION */
 #what-i-do description
@@ -188,7 +296,8 @@ h1 {
   letter-spacing: 0.2rem;
   border: dashed; }
 #what-i-do p {
-  letter-spacing: 0.1rem; }
+  letter-spacing: 0.1rem;
+  font-size: 1.5rem; }
 
 /* HELP SECTION */
 #help description
@@ -196,12 +305,15 @@ h2 {
   font-size: 2.8rem;
   color: #1e90ff;
   font-family: "Comfortaa";
-  padding: 4rem 0 4rem; }
+  padding: 4rem 0 4rem;
+  bg-dark: F76C6C; }
 #help h3 {
   color: #1e90ff;
-  letter-spacing: 0.1rem; }
+  letter-spacing: 0.1rem;
+  font-size: 1.7rem; }
 #help p {
-  letter-spacing: 0.1rem; }
+  letter-spacing: 0.1rem;
+  font-size: 1.5rem; }
 #help a {
   background-color: #1e90ff;
   transition: 1s;
