--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -19,13 +19,15 @@
   color: transparent;
   white-space: nowrap;
   cursor: pointer;
-  overflow: hidden; }
+  overflow: hidden;
+  outline: 0; }
 
 .hamburger-menu-button-open {
   top: 50%;
   margin-top: -1px;
   left: 50%;
-  margin-left: -12px; }
+  margin-left: -12px;
+  outline: 0; }
 
 .hamburger-menu-button-open,
 .hamburger-menu-button-open::before,
