--- a/scss/main-styles.scss
+++ b/scss/main-styles.scss
@@ -35,12 +35,14 @@ $header-font: 2.8rem;
   white-space: nowrap;
   cursor: pointer;
   overflow: hidden;
+  outline: 0;
 }
 .hamburger-menu-button-open {
   top: 50%;
   margin-top: -1px;
   left: 50%;
   margin-left: -12px;
+  outline: 0;
 }
 .hamburger-menu-button-open, 
 .hamburger-menu-button-open::before, 
