--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -187,7 +187,7 @@ h2 {
   font-family: "Comfortaa"; }
 
 header {
-  font-family: "Fredericka the Great";
+  font-family: "Lakki Reddy";
   font-weight: normal;
   font-size: 1.3rem;
   text-rendering: optimizeLegibility;
@@ -223,7 +223,7 @@ header {
   -ms-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
-  background-image: linear-gradient(45deg, #A1C3D1, #B39BC8, #E64398, #F172A1);
+  background-image: linear-gradient(45deg, #F172A1, #FFFF00, #FFFF00, #F172A1);
   animation: .5s shake infinite alternate; }
 
 @keyframes shake {
@@ -270,12 +270,12 @@ a {
 #hello article {
   max-width: 460px; }
 #hello h3 {
-  font-size: 2.8rem;
+  font-size: 2rem;
   color: #fff;
   font-family: "Comfortaa"; }
 #hello p {
-  font-size: 1.5rem;
-  margin: 0 0 10px;
+  font-size: 1.4rem;
+  margin: 0 0 7px;
   color: #fff;
   font-size: 2rem; }
 
@@ -285,10 +285,10 @@ a {
 /* WHAT I DO SECTION */
 #what-i-do description
 h1 {
-  font-size: 2.8rem;
+  font-size: 2rem;
   color: #1e90ff;
   font-family: "Comfortaa";
-  padding: 7rem 0 3rem; }
+  padding: 8rem 0 3rem; }
 #what-i-do hr {
   border-color: #1e90ff;
   border-width: 0.25rem;
@@ -299,7 +299,7 @@ h1 {
   border: dashed; }
 #what-i-do p {
   letter-spacing: 0.1rem;
-  font-size: 1.5rem; }
+  font-size: 1.3rem; }
 
 .text-division-sizing {
   padding-bottom: 7rem; }
@@ -307,7 +307,7 @@ h1 {
 /* HELP SECTION */
 #help description
 h2 {
-  font-size: 2.8rem;
+  font-size: 2rem;
   color: #1e90ff;
   font-family: "Comfortaa";
   padding: 4rem 0 4rem;
