--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -9,7 +9,8 @@
   padding: 6px;
   display: block;
   position: relative;
-  margin-top: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   z-index: 100;
   background: #3AAFA9;
   border: 5px solid white;
