--- a/scss/main-styles.scss
+++ b/scss/main-styles.scss
@@ -24,7 +24,8 @@ $header-font: 2rem;
   padding: 6px;
   display: block;
   position: relative;
-  margin-top: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   z-index: 100;
   background: $background-gradient-top;
   border: 5px solid white;
