--- a/scss/main-styles.scss
+++ b/scss/main-styles.scss
@@ -149,6 +149,8 @@ $header-font: 2rem;
 		font-size: $size-of-font;
 		letter-spacing: $spacing-letters;
 	}
+/* } */
+
 
 	/* MASTERHEAD SECTION */
 
